# appsec-crew

./: .coverage  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  appsec_crew.yaml  osv-scanner.toml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/appsec-crew-steps/: action.yml
.github/workflows/: appsec-crew-reusable.yml  ci.yml  run-reusable.yml
assets/: appsec-crew-banner.txt
examples/: README.md  appsec_crew.anthropic-claude.yaml  appsec_crew.github-models.yaml  appsec_crew.openai.yaml  osv-scanner.toml.example  semgrep-local-rules.example.yml
scripts/: ci_osv_gate.py
src/appsec_crew/: __init__.py  bundled_appsec_crew.yaml  ci_versions.py  crew.py  git_ops.py  main.py  pipelines.py  resolve_crew_checkout_ref.py  runtime.py  settings.py  triage_llm.py  workflow_tools.py
src/appsec_crew/config/: agents.yaml  tasks.yaml
src/appsec_crew/defaults/: .betterleaks.toml
src/appsec_crew/integrations/: github_api.py  jira_api.py  splunk_hec.py  webhook_client.py
src/appsec_crew/scanners/: betterleaks_scan.py  osv_scan.py  semgrep_scan.py  subprocess_run.py
tests/: test_bundled_tool_versions.py  test_ci_versions.py  test_command_log.py  test_config_resolve.py  test_cvss.py  test_filters.py  test_github_api.py  test_llm.py  test_pipelines_pr_mode.py  test_resolve_crew_checkout_ref.py  test_semgrep_scan.py  test_settings.py  test_severity.py  test_subprocess_run.py  test_triage_llm_routing.py
(+7 files in other folders)
